test/src/e2e_vm_tests/test_programs/should_fail/attributes_missing_annotated_item/src/trailing_single_inner_attribute.sw
// TODO: Adjust this test once https://github.com/FuelLabs/sway/issues/6924 is implemented.
library;

#![allow(dead_code)]